--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.1",
