--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "neontradebot-backend",
+  "version": "1.0.0",
+  "description": "NeonTradeBot backend API for Sei Network DeFi automation",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": "npm install",
+    "dev": "node server.js"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@goat-sdk/core": "^0.5.0",
     "@goat-sdk/plugin-crossmint-headless-checkout": "^0.0.14",
